# cppmat

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  cppmat.h  cppmat.pc.in  cppmatConfig.cmake.in  cppmatrix.h  cpptensor.h  py_cppmat.h  py_cppmatrix.h  py_cpptensor.h  setup.py
cppmat/: __init__.py
develop/: CMakeLists.txt  fix_cartesian_tensor2.cpp  fix_cartesian_tensor2_2.cpp  fix_cartesian_tensor2_3.cpp  fix_cartesian_tensor2d.cpp  fix_cartesian_tensor2d_2.cpp  fix_cartesian_tensor2d_3.cpp  fix_cartesian_tensor2s.cpp  fix_cartesian_tensor2s_2.cpp  fix_cartesian_tensor2s_3.cpp  fix_cartesian_tensor4.cpp  fix_cartesian_tensor4_2.cpp  fix_cartesian_tensor4_3.cpp  fix_cartesian_vector.cpp  fix_cartesian_vector_2.cpp  fix_cartesian_vector_3.cpp  fix_diagonal_matrix.cpp  fix_misc_matrix.cpp  fix_regular_array.cpp  fix_symmetric_matrix.cpp  main.cpp  matrix.cpp  matrix2.cpp  periodic_array.cpp  periodic_matrix.cpp  periodic_vector.cpp  regular_array.cpp  regular_matrix.cpp  regular_vector.cpp  support.h  tensor.cpp  tensor2.cpp  tensor3.cpp  tiny_matrix.cpp  tiny_matrix2.cpp  tiny_vector.cpp  var_cartesian.cpp  var_cartesian_tensor2.cpp  var_cartesian_tensor2d.cpp  var_cartesian_tensor2s.cpp  (+12 more)
develop/design/overload/: test.cpp
develop/new/: cppmat.h  misc_matrix.cpp  regular_array.cpp  regular_array.h  regular_matrix.cpp  regular_matrix.h  stl.cpp  stl.h  symmetric_matrix.cpp
develop/new/develop/: regular_array.cpp
docs/: Makefile  compile.rst  conf.py  copy.rst  cppmat.idraw  cppmat.rst  cppmat_cartesian.rst  cppmat_cartesian2.rst  cppmat_cartesian2d.rst  cppmat_cartesian3.rst  cppmat_cartesian3d.rst  cppmat_fix.rst  cppmat_map.rst  cppmat_periodic.rst  cppmat_regular.rst  cppmat_tensor.rst  cppmat_tensor2.rst  cppmat_tiny.rst  cppmat_var_diagonal.rst  cppmat_var_regular.rst  cppmat_var_symmetric.rst  cppmat_view.rst  cppmat_view_cartesian2d.rst  cppmat_view_cartesian3d.rst  cppmat_view_tiny.rst  develop.rst  eigen.rst  histogram.rst  index.rst  make.bat  map.rst  matrix.rst  matrix2.rst  misc.rst  periodic_matrix.rst  periodic_matrix2.rst  periodic_vector.rst  python.rst  requirements.txt  tensor.rst  (+5 more)
docs/examples/matrixlib/: CMakeLists.txt  example.py  matrixlib.cpp  setup.py
docs/examples/tensorlib/: CMakeLists.txt  cppmat.h  cpptensor.h  example.py  py_cppmat.h  py_cpptensor.h  setup.py  tensorlib.cpp
include/cppmat/: matrix.h  pybind11_matrix.h  pybind11_tensor.h  pybind11_tensor3.h  pybind11_tensor3d.h  tensor.h  tensor3.h  tensor3d.h
include/cppmat/pybind11/: tensor.h
python/: .gitignore  MANIFEST.in  setup.py
python/cppmat/: __init__.py
src/: .gitignore  CMakeLists.txt  cppmat.h
src/cppmat/: .gitignore  cppmat.h  diagonal_matrix.cpp  diagonal_matrix.h  fix_cartesian.cpp  fix_cartesian.h  fix_cartesian.hpp  fix_cartesian_2.cpp  fix_cartesian_2.hpp  fix_cartesian_3.cpp  fix_cartesian_3.hpp  fix_cartesian_tensor2.cpp  fix_cartesian_tensor2.h  fix_cartesian_tensor2.hpp  fix_cartesian_tensor2d.cpp  fix_cartesian_tensor2d.h  fix_cartesian_tensor2d.hpp  fix_cartesian_tensor2s.cpp  fix_cartesian_tensor2s.h  fix_cartesian_tensor2s.hpp  fix_cartesian_tensor4.cpp  fix_cartesian_tensor4.h  fix_cartesian_tensor4.hpp  fix_cartesian_vector.cpp  fix_cartesian_vector.h  fix_cartesian_vector.hpp  fix_diagonal_matrix.cpp  fix_diagonal_matrix.h  fix_diagonal_matrix.hpp  fix_misc_matrix.cpp  fix_misc_matrix.h  fix_misc_matrix.hpp  fix_periodic_array.cpp  fix_periodic_array.h  fix_periodic_matrix.cpp  fix_periodic_matrix.h  fix_periodic_vector.cpp  fix_periodic_vector.h  fix_regular_array.cpp  fix_regular_array.h  (+209 more)
verify/: verify_matrix.cpp
